--- a/docs/themes/cloudinary/layout/layout.twig
+++ b/docs/themes/cloudinary/layout/layout.twig
@@ -40,7 +40,7 @@
                     <li><a href="{{ path('doc-index.html') }}">Index</a></li>
                     <li><a href="{{ path('search.html') }}">Search</a></li>
                     <li><a href="/documentation/sdks/php/">PHP SDK Reference</a></li>
-                    <li><a href="https://cloudinary.com/documentation/php2_integration" target="_blank">SDK User Guide</a></li>
+                    <li><a href="/documentation/php2_integration" target="_blank">SDK User Guide</a></li>
                 </ul>
             </div>
         </div>
