Fix docs template

--- a/docs/themes/cloudinary/index.twig
+++ b/docs/themes/cloudinary/index.twig
@@ -1,7 +1,7 @@
 {% from "macros.twig" import render_classes %}
 
-{% set extension = 'class.twig' %}
-{% set namespace = 'Cloudinary\\Transformation\\' %}
+{% set extension = 'namespace.twig' %}
+{% set namespace = 'Cloudinary\\Transformation' %}
 {% set subnamespaces = [] %}
 {% set exceptions = [] %}
 
