Update reference docs description

--- a/docs/themes/cloudinary/index.twig
+++ b/docs/themes/cloudinary/index.twig
@@ -12,7 +12,11 @@
     <div class="page-header">
         <h1> {{ project.config('title') }}</h1>
     </div>
-
+    <div class="description">
+        <p>This reference provides details on all PHP SDK transformation namespaces and classes.</p>
+        <p>For details on the PHP SDK management namespaces and classes,
+            see the <a href="/documentation/sdks/php/">PHP SDK Management Reference.</a></p>
+    </div>
     {% if classes %}
         <h2>Classes</h2>
         {{ render_classes(classes) }}
